# bucksaw

./: .gitignore  Cargo.toml  README.md  index.html
assets/: manifest.json
src/: flight_data.rs  gui.rs  iter.rs  log_file.rs  main.rs  step_response.rs  utils.rs
src/gui/: blackbox_ui_ext.rs  colors.rs  flex.rs  flight_view.rs  open_file.rs  tabs.rs
src/gui/tabs/: plot.rs  tune.rs  vibe.rs
